// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NetworkLogo > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
    data-testid="network-logo-8453"
    style="--c-z: 10; width: 20px; height: 20px; border-radius: 6px; border-width: 0px;"
  >
    <div
      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
      style="object-fit: contain; width: 21px; height: 21px;"
    >
      <div
        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
        style="background-image: url(mock-asset-BASE_LOGO.png);"
      />
      <img
        alt=""
        class="css-accessibilityImage-9pa8cd"
        draggable="false"
        src="mock-asset-BASE_LOGO.png"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransactionSummaryNetworkLogo > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
    data-testid="network-logo-8453"
    style="--c-z: 10; width: 23.2px; height: 23.2px; border-radius: 6.96px; border-width: 1.6px;"
  >
    <div
      class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
      style="object-fit: contain; width: 21px; height: 21px;"
    >
      <div
        class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
        style="background-image: url(mock-asset-BASE_LOGO.png);"
      />
      <img
        alt=""
        class="css-accessibilityImage-9pa8cd"
        draggable="false"
        src="mock-asset-BASE_LOGO.png"
      />
    </div>
  </div>
</DocumentFragment>
`;
